fix grey overlay on mobile not reaching bottom

--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -9,12 +9,16 @@
 
 @media (max-width: 992px) {
   .cc-greyedSurveyForm {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
     opacity: 0.5;
     background-color: #737373;
     position: absolute;
     left: 0;
     width: 100%;
-    height: 100%;
+    min-height: 85vh;
     /*on top of survey form*/
     z-index: 1;
   }
